fix: body overflow

--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -25,15 +25,9 @@ html, body {
   margin: 0;
   padding: 0;
 
-  height: 100%;
-  font-family: 'Nunito', Helvetica, sans-serif;
   font-size: 14px;
 
   transition-duration: 0.3s;
-
-  @media (min-width: 2000px) {
-    font-size: 16px;
-  }
 }
 
 a {
